--- a/calculations.html
+++ b/calculations.html
@@ -22,9 +22,10 @@
         <br>
         <br>
         <button onclick="cal()">calculate</button>
-        <input type="text" name="third" id="res"/>
+        <input type="text" name="third" id="res"/><hr>
         <!--sum of array-->
         <form id="sumForm">
+          <h2>sum of array</h2>
             <label for="num1">Number 1:</label>
             <input type="number" id="num1" name="num1" required>
             <br>
@@ -42,7 +43,7 @@
             <br>
             <button type="submit">Calculate Sum</button>
           </form>
-          <p id="sumResult"></p>
+          <p id="sumResult"></p><hr>
           <!--parsed value-->
           <h1>Parsed Value</h1>
   <form id="valueForm">
@@ -51,7 +52,7 @@
     <br>
     <button type="submit">Parse Value</button>
   </form>
-  <p id="parsedResult"></p>
+  <p id="parsedResult"></p><hr>
        <!--tax calculator-->
        <h2>Tax Calculator</h2>
        <div class="row">
@@ -88,7 +89,7 @@
         <div class="col2">
           <input type="number" name="total-amount" min="0" id="total-amount" disabled><br>
         </div>
-      </div>  
+      </div> <hr> 
       <!--intrest calculator-->
       <h2>Intrest Calculator</h2>
       <div class="row">
@@ -148,7 +149,7 @@
           <input type="number" name="total-amount" min="0" id="total-amount" disabled><br>
         </div>
       </div> 
-    
+      <hr>
     <!--vertical sum of ARRAY-->
     <h2>Vertical Sum of Array</h2>
     <h4>Enter Product Information</h4>
@@ -165,7 +166,7 @@
 
 <h2>Vertical Sum of Product Name, Price, and Quantity</h2>
 <button onclick="calculateVerticalSum()">Calculate Vertical Sum</button>
-<div id="result"></div><br>
+<div id="result"></div><br><hr>
     <!--generate random number-->
     <div>
         
@@ -174,7 +175,7 @@
         <input type="number" id="digits" value="3" min="1">
         <button onclick="displayRandomNumber()">Generate Random Number</button>
         <p id="result1"></p>
-    </div>
+    </div><hr>
      <!--compound intrest calculation-->
      <h2>Compound Interest Calculation</h2>
      <label for="principal">Principal:</label>
